--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <ul>
 <li><a href="tan_ah_huay/">Tan Ah Huay</a></li>
 <li><a href="goh_ah_swee/">Goh Ah Swee</a></li>
+<li><a href="lau_ah_khiang/">Lau Ah Khiang</a></li>
+<li><a href="lim_ah_mee/">Lim Ah Mee</a></li>
 </ul>
 </body>
 </html>
